k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
    app: fastapi
 name: k8s-fastapi-server
spec:
 selector:
   app: fastapi
 type: NodePort
 ports:
   - port: 5050
